# sonjunseong

API-Document-master/: README.md
API-Document-master/docs/: readme.md
ARTIV-Big-Picture-master/ARTIV-Big-Picture-master/: README.md
ARTIVFramework-main/: README.md
ARTIV_Communication-master/: README.md
ARTIV_Communication-master/Information/: try_to_can2.md  try_to_can3.md  try_to_can4.md
ARTIV_Communication-master/dbw_erp42/: readMe.md
ARTIV_Communication-master/dbw_erp42/dbw_erp42_v2_release(2020)/: CMakeLists.txt  package.xml
ARTIV_Communication-master/dbw_erp42/dbw_erp42_v2_release(2020)/msg/: ERPmsg.msg
ARTIV_Communication-master/dbw_erp42/dbw_erp42_v2_release(2020)/scripts/: can_comms_erp42.py  dbw_cmd_erp42.py  dbw_erp42.launch  dbw_erp42_node.py  processing_node_erp42.py  run_serial.sh
ARTIV_Communication-master/dbw_ioniq/: readme.md
ARTIV_Communication-master/manual/: ioniq_control.md
ARTIV_Communication-master/media/: readme.md
ARTIV_Communication-master/rosbag/: readme.md
IMU-master/: readme.md
IMU-master/additional_imu_driver/: CMakeLists.txt  package.xml  readme.md
IMU-master/additional_imu_driver/launch/: imu_driver.launch
IMU-master/additional_imu_driver/src/: imu.cpp
Integrated_SW-master/: README.md
Integrated_SW-master/UI (Early Version.)/: readme.md
Integrated_SW-master/VANGUARD (Self-Diagnosis protocol)/: readme.md
Integrated_SW-master/artiv_missionManager/: OSMHandler.py  artiv_sf.py  map_parser.py  missionManager.ui  mission_trigger.py  sensorFuse.ui
Integrated_SW-master/artiv_mission_emulator/: emulator.ui  mission_emul.py  readme.md
Integrated_SW-master/artiv_sensorFuse/: artiv_sf.py  artiv_sf_pyqt.py  rsc_data.qrc  rsc_data_rc.py  sensorFuse.ui  test.py
Integrated_SW-master/dbw erp controller/: controlGo.sh  dbw_controller.py  vtc.ui  vtc.ui.bak8  vtc_rs.qrc  vtc_rs_rc.py
Integrated_SW-master/dbw ioniq controller/: controlGo.sh  dbw_controller.launch  dbw_controller.py  rosbag_bookmark.launch  vtc.ui.bak
Integrated_SW-master/log_example/: readme.md
Integrated_SW-master/watchDog/: alertScreen.ui  fatalScreen.ui  logalert.ui  readme.md  start.sh  watchDog.desktop  watchDog.py
Lidar-master/: README.md
Lidar-master/Jaeseung's_Code/: readme.md
Lidar-master/hyunjin/: readme.md  ros2_realtime.py  ros_realtime.py  show.py
Lidar-master/hyunjin/align/src/alignment/: CMakeLists.txt
Lidar-master/hyunjin/align/src/alignment/src/: align_realtime.cpp
Lidar-master/hyunjin/align_nms/align_nms/: CMakeLists.txt  package.xml
Lidar-master/hyunjin/align_nms/align_nms/src/: align_nms_realtime.cpp
Lidar-master/hyunjin/align_ws/src/alignment/: CMakeLists.txt  package.xml
Lidar-master/hyunjin/align_ws/src/alignment/src/: align_realtime.cpp
Localization-master/: README.md
Localization-master/GPS_Package/: readme.md
Localization-master/ros_package/: readme.md
Manual-master/: readme.md
Manual-master/symlink/: device_setting.sh
dgist-artiv-github-io-master/: README.md
openCR-Imu-master/: readme.md
ros-selective-bridge-main/: README.md
(+220 files in other folders)
